# tjr101

./: README.md  artifact-registry.md  cloudrun-function.md  gcp_20250326.md  gcp_20250507_20250511.md  gcp_20250517.md
airflow-demo/dags/: d_01_example_dag.py  d_07_example_data_pipeline copy.py  d_12_google_search.py
airflow-demo/tasks/: test_tasks.py
airflow-demo/utils/: my_notifier.py
data-pipeline/: .gitignore  Dockerfile  requirements.txt
data-pipeline/.devcontainer/: devcontainer.json  postCreateCommand.sh
data-pipeline/resource/: data_with_nan.csv  dtype_sample.csv
data-pipeline/src/: 01_pandas_practice.ipynb  02_ptt_article.ipynb  03_read_big_file.ipynb  04_pandas_apply.ipynb  05_deal_with_nan.ipynb  06_deal_with_typing.ipynb  07_pandas_merge.ipynb  08_melt.ipynb  09_pandasql.ipynb  10_mysql_connection.ipynb  11_pymysql_executemany.ipynb  12_pandas_read_sql.ipynb  code_review.py  crawler_example.ipynb  pathlib_example.py  test.ipynb  test.py
devcontainer-demo/.devcontainer/: devcontainer.json  postCreateCommand.sh
flask-demo/: app.py  pyproject.toml
gcp/: .gitignore  01_bigquery_public_dataset.py  02_query_external_google_sheets.py  03_read_google_sheets.py  04_read_secret_manager.py  flask.Dockerfile  pyproject.toml
gcp/sql/: external_partitioned_table.sql
interview-question/: 02.md
poetry-demo/: Dockerfile  pyproject.toml
poetry-demo/.devcontainer/: devcontainer.json  postCreateCommand.sh
poetry-demo/src/: test.py
selenium-demo/: delete_selenium_session.py  pyproject.toml  selenium-api-demo.py
(+17 files in other folders)
